# backend/src/interfaces/dto/update-interface.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/mapped-types';
+import { CreateInterfaceDto } from './create-interface.dto';
+
+export class UpdateInterfaceDto extends PartialType(CreateInterfaceDto) {}
